// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling
       
      <span>
        $20.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-layout"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary component 2`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling
       
      <span>
        $12.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-layout"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
